Custom--app/main/default/objects/File_Storage_History__c/File_Storage_History__c.object-meta.xml
<CustomObject>
    <label>File Storage History</label>
    <nameField>
        <displayFormat>FSH-{00000000}</displayFormat>
        <label>File Storage History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Storage Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>