Custom--app/main/default/objects/File_Storage_History__c/fields/File_Action__c.field-meta.xml
<CustomField>
    <fullName>File_Action__c</fullName>
    <label>File Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>Rename</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>