Custom--app/main/default/objects/File_Storage_History__c/fields/File_Action_By__c.field-meta.xml
<CustomField>
    <fullName>File_Action_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Action By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Storage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>