Custom--app/main/default/objects/File_Storage_History__c/fields/File_Name_New__c.field-meta.xml
<CustomField>
    <fullName>File_Name_New__c</fullName>
    <label>File Name New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>