Custom--app/main/default/objects/File_Storage_History__c/fields/File_Type_Orig__c.field-meta.xml
<CustomField>
    <fullName>File_Type_Orig__c</fullName>
    <label>File Type Original</label>
    <length>80</length>
    <type>Text</type>
</CustomField>