Custom--app/main/default/objects/File_Storage_History__c/fields/Linked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Record_Id__c</fullName>
    <label>Linked Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>