Custom--app/main/default/objects/File_Storage_History__c/fields/S3_Path_Name_New__c.field-meta.xml
<CustomField>
    <fullName>S3_Path_Name_New__c</fullName>
    <label>S3 Path Name New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>