Custom--app/main/default/objects/File_Storage_History__c/fields/S3_Path_Name_Orig__c.field-meta.xml
<CustomField>
    <fullName>S3_Path_Name_Orig__c</fullName>
    <label>S3 Path Name Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>