Custom--app/main/default/objects/File_Storage_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Name_Orig__c</columns>
    <columns>S3_Path_Name_Orig__c</columns>
    <columns>S3_Path_Name_New__c</columns>
    <columns>File_Action_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>